--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <footer>
         <p>
           Copyright © 2024 <strong>Xintra</strong>. Designed with
-          <span>❤</span> by <strong>Spruko</strong> All rights reserved
+          <span>❤</span> by <strong>YahYa.</strong> All rights reserved
         </p>
       </footer>
     </div>
